# fliser

./: .flake8  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: python-publish-test.yml  python-publish.yml
docs/reference/: fliser.md  helpers.md  masks.md
fliser/: __init__.py  dimensions.py  fliser.py  masks.py
